--- a/project/test/mainNoLog.html
+++ b/project/test/mainNoLog.html
@@ -460,7 +460,7 @@
 								<div class="popup-wind__input checkbox">
 									<input class="okas" type="checkbox" name="">
 								</div>
-								<span class="curs-point-s">Принять условия</span>
+								<span id="acceptTerms" class="curs-point-s">Принять условия</span>
 							</div>
 							<p></p>
 						</div>
@@ -471,6 +471,63 @@
 								</button>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div id="logAcceptTerms" class="popup-wind__form-block popup-wind__form-bq popup-wind__ollAcc">
+				<div class="popup-wind__header">
+					<div class="back-chat-btn">
+						<button class="back-chat-btn-ine back-chat-log">
+							<span class="arrow-l-btn">
+								<i class="fa fa-caret-left" aria-hidden="true"></i>
+							</span>
+						</button>
+					</div>
+					<h3>Положения и условия</h3>
+				</div>
+				<div class="popup-wind__body bg_gradient">
+					<div class="scroll-wrapper topay-block__wrap">
+							<h2>Положения и условия</h2>
+
+<ol>
+<li>Основные положения
+<ol>
+<li>Регистрируясь на сайте, Вы подтверждаете, что ознакомились с данными Правилами и обязуетесь их выполнять.</li>
+<li>Администрация имеет право вносить изменения в Правила без предварительного уведомления Пользователей. В Ваши обязанности входит периодическая проверка правил и условий. Если Вы не согласны с изменениями, то можете прекратить использование сайта и/или закрыть аккаунт. Дальнейшее использование любой части сайта после публикации новых условий автоматически будет рассматриваться как согласие и принятие пересмотренных условий Правил, включая любые дополнения, удаления, замены и другие изменения, относящиеся к использованию услуг.</li>
+<li>Регистрируясь на сайте, Вы подтверждаете, что достигли совершеннолетия согласно законов Вашей страны и даете личное согласие на азартную игру.</li>
+<li>Вы обязуетесь указывать в личном профиле достоверные данные. Администрация вправе запросить документальное подтверждение личности при необходимости.</li>
+<li>Принимая Правила, Вы осознаете, что Администрация может периодически проводить проверки для подтверждения личности, контактной и платежной информации.</li>
+<li>Во время проведения проверки может быть ограничена возможность вывода денежных средств с аккаунта.</li>
+<li>Если какая-либо, предоставленная Вами информация является ложной, неточной или вводящей в заблуждение, то считается, что условия Правил нарушены и Администрация имеет право закрыть аккаунт незамедлительно и/или отказать в использовании услуг Веб-сайта в дополнение к любым другим действиям на свое усмотрение.</li>
+</ol>
+</li>
+<br>
+<li>Регистрация
+<ol>
+<li>Минимально необходимыми данными, которые нужно указать при регистрации аккаунта, являются: номер мобильного телефона или email и валюта аккаунта. Для возможности использования всего спектра услуг, которые предоставляет Администрация , необходимо заполнить все поля во вкладке «Мои данные».</li>
+<li>Для подтверждения подлинности информации, указанной в профиле, Администрация имеет право запросить документы, подтверждающие личность, а также применить дополнительные требования. Если в силу каких-либо причин Вы не можете предоставить документы, подтверждающие личность, Администрация оставляет за собой право приостановить действие аккаунта до тех пор, пока получит документы, или окончательно закрыть аккаунт, если документы так и не были предоставлены.</li>
+<li>После настроек аккаунта нельзя изменить имя, фамилию, дату рождения и контакты.</li>
+<li>Пользователь обязуется использовать свой аккаунт лично и не имеет права передавать доступ к своему аккаунту третьим лицам.</li>
+<li>Администрация считает, что все действия и транзакции, которые происходят в аккаунте, осознанно совершает владелец аккаунта.</li>
+<li>Вы должны использовать свой аккаунт лично и не передавать доступ к своему аккаунту третьим лицам. А так же необходимо хранить свои регистрационные данные в месте, недоступном для третьих лиц. При утере пароля для доступа к аккаунту Вы можете воспользоваться сервисом восстановления пароля.</li>
+<li>Вы обязаны сообщить администрации <span style="font-size:13px">ChampClub.ne</span> о неправомерном использовании своего аккаунта третьими лицами в кратчайшие сроки любым доступным способом. После Вашего сообщения о неправомерном использовании аккаунта — Администрация блокирует аккаунт. За действия, совершенные третьими лицами, до момента блокировки аккаунта Администрация ответственности не несет.</li>
+<li>Вы можете иметь на ресурсе ChampClub.net&nbsp;только один игровой аккаунт. Создание нескольких аккаунтов на человека, на семью, на дом, на IP адрес, на компьютер или мобильное устройство запрещено.(Cистема безопасности будет распознавать и блокировать вывод средств). Использовать чужую платёжную систему или банковскую карту категорически запрещено!</li>
+<li>При увличении Пользователя в нарушении данных Правил Администрация автоматически и бесповоротно блокирует на аккаунтах Пользователя бонусные предложения или блокирует аккаунт(ы) пользователя без возможности восстановления, а также, на свое усмотрение, имеет право закрыть аккаунт Пользователя незамедлительно и/или отказать Пользователю в использовании услуг Веб-сайта. А также, в случае выявления нарушения Администрация оставляет за собой право аннулировать выигрыш.</li>
+</ol>
+</li>
+<br>
+<li>Депозиты и вывод денежных средств
+<ol>
+<li>Минимальная и максимальная сумма депозита ограничивается минимальной и максимально допустимой суммой согласно выбранному методу оплаты.</li>
+<li>При внесении депозита необходимо в точности следовать указаниям. Игнорирование явных запретов и ограничений, указанных в данном разделе, снимает с Администрации ответственность за неперечисленные средства.</li>
+<li>При внесении депозита на странице «Коды» нужно указать сумму платежа, способ оплаты. После совершения успешной оплаты сумма депозита будет зачислена на номер счёта.</li>
+<li>При внесении депозита до момента уведомления об успешной оплате не нужно кликать кнопки управления браузера, а именно «Обновить» и «Назад». Это может повлечь за собой сбой в проведении транзакции.</li>
+<li>Запрещается вводить и выводить депозиты без последующей игры, не использовавши менее 20% поставленного депозита.</li>
+<li>Вы можете вносить деньги только со своего счета в ЭПС, банковской карты или телефона. В случае выявления фактов нарушения данного условия все выигрыши будут аннулированы, а сумма последнего (выигрышного) депозита будет возвращена на карту/кошелек, с которого вносился депозит. При этом может быть окончательно и бесповоротно заблокирован аккаунт-нарушитель. Запрещено внесение депозита третьими лицами: друзьями, родственниками или партнерами. Вывод средств возможен только на банковские карты, кошельки и т.п., с которых был внесен депозит и которые открыты на имя владельца аккаунта.</li>
+<li>Все входящие и исходящие платежи Администрация проводятся через программное обеспечение и счета финансовых партнеров, в связи с этим Администрация не может гарантировать бесперебойного и своевременного проведения платежей.</li>
+</ol>
+</li>
+</ol>
 					</div>
 				</div>
 			</div>
