--- a/project/test/index.html
+++ b/project/test/index.html
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div class="header__mob-top">
-			
+
 		</div>
 		<nav class="header__nav-bar nav-bar">
 			<ul class="nav-bar__list">
@@ -65,9 +65,10 @@
 					Юниты за 8 %. Мгновенное пополнение.
 				</h2>
 				<p class="head__sub-title">10000р в подарок при подключении зала!</p>
-				<a href="#" class="head__btn btn">ПОДКЛЮЧИТЬ ЗАЛ</a>
+				<a href="#" id="head__btn" class="head__btn btn">ПОДКЛЮЧИТЬ ЗАЛ</a>
 			</div>
-			<div class="head__form form">
+			<div id="head__form" class="head__form form">
+				<button id="head__exit" class="head__exit">+</button>
 				<p class="form__title">
 					Задать вопрос нашим специалистам
 				</p>
