--- a/project/test/index.html
+++ b/project/test/index.html
@@ -42,9 +42,16 @@
 			</div>
 		</div>
 		<div class="header__mob-top">
-
+			<a href="#" class="logo">
+				<img src="./img/logo-mob.png" alt="">
+			</a>
+			<button id="nav-btn" class="header__btn">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
 		</div>
-		<nav class="header__nav-bar nav-bar">
+		<nav id="nav-bar" class="header__nav-bar nav-bar">
 			<ul class="nav-bar__list">
 				<li class="nav-bar__item"><a href="#" class="nav-bar__btn">Главная</a></li>
 				<li class="nav-bar__item"><a href="#" class="nav-bar__btn">Визуализация</a></li>
@@ -65,7 +72,7 @@
 					Юниты за 8 %. Мгновенное пополнение.
 				</h2>
 				<p class="head__sub-title">10000р в подарок при подключении зала!</p>
-				<a href="#" id="head__btn" class="head__btn btn">ПОДКЛЮЧИТЬ ЗАЛ</a>
+				<a href="#" class="head__btn btn addCall">ПОДКЛЮЧИТЬ ЗАЛ</a>
 			</div>
 			<div id="head__form" class="head__form form">
 				<button id="head__exit" class="head__exit">+</button>
@@ -153,8 +160,106 @@
 						<div class="games__img"><img src="./img/content/games/8.jpg" alt=""></div>
 					</a>
 				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<p class="games__top">Топ-100</p>
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/1.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/2.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/3.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/4.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/5.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/6.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/7.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/8.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<p class="games__top">Топ-100</p>
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/1.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/2.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/3.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/4.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/5.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/6.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/7.jpg" alt=""></div>
+					</a>
+				</li>
+				<li class="games__item">
+					<a href="#" class="games__link">
+						<h3 class="games__name">Название игры</h3>
+						<div class="games__img"><img src="./img/content/games/8.jpg" alt=""></div>
+					</a>
+				</li>
 			</ul>
-			<div class="games__btn "><a href="#" class="btn">ПОКАЗАТЬ ВСЕ ИГРЫ</a></div>
+			<div class="games__btn "><a href="#"  id="games__btn" class="btn">ПОКАЗАТЬ ВСЕ ИГРЫ</a></div>
 		</div>
 	</section>
 	<section class="banner">
@@ -164,7 +269,7 @@
 				<p class="banner__text">
 					Какой-то продающий заголовок, который привлечет потенциального клиента
 				</p>
-				<a href="#" class="banner__btn btn">ПОДКЛЮЧИТЬ ЗАЛ</a>
+				<a href="#" class="banner__btn btn addCall">ПОДКЛЮЧИТЬ ЗАЛ</a>
 			</div>
 		</div>
 	</section>
