--- a/project/test/index.html
+++ b/project/test/index.html
@@ -74,8 +74,7 @@
 				<p class="head__sub-title">10000р в подарок при подключении зала!</p>
 				<a href="#" class="head__btn btn addCall">ПОДКЛЮЧИТЬ ЗАЛ</a>
 			</div>
-			<div id="head__form" class="head__form form">
-				<button id="head__exit" class="head__exit">+</button>
+			<div class="head__form form">
 				<p class="form__title">
 					Задать вопрос нашим специалистам
 				</p>
@@ -276,6 +275,23 @@
 	<footer class="footer">
 		<p class="footer__text">Copyright © 2018 - 2020</p>
 	</footer>
+	
+	<div id="head__form" class="head__form form">
+		<button id="head__exit" class="head__exit">+</button>
+		<p class="form__title">
+			Задать вопрос нашим специалистам
+		</p>
+		<h4 class="form__sub-title">РАБОТАЕМ КРУГЛОСУТОЧНО</h4>
+		<form action="">
+			<div class="inputBox">
+				<input type="text" name="" placeholder="Ваше имя">
+			</div>
+			<div class="inputBox">
+				<input type="tel" name="" placeholder="Ваш телефон">
+			</div>
+			<input type="submit" value="ЗАКАЗАТЬ ЗВОНОК" class="btn">
+		</form>
+	</div>
 	<div class="body-bg">
 		<div class="body-bg-top"></div>
 		<div class="body-bg-mid"></div>
