--- a/project/test/main.html
+++ b/project/test/main.html
@@ -52,9 +52,68 @@
 				<li class="nav-bar__item"><a href="#" class="nav-bar__btn">Terms of service</a></li>
 			</ul>
 			<div class="option">
-				<div class="option__btn">English</div>
+				<div class="option__wrap-btn">
+					<button class="option__btn" id="langBtn">English</button>
+					<ul class="option__list" id="langList">
+						<li class="option__item">
+							<button class="option__opt-btn">English</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">Russia</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">UA</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">English</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">Russia</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">UA</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">English</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">Russia</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">UA</button>
+						</li>
+					</ul>
+				</div>
 				<hr />
-				<div class="option__btn">USD</div>
+				<div class="option__wrap-btn">
+					<button class="option__btn" id="valBtn">USD</button>
+					<ul class="option__list" id="valList">
+						<li class="option__item">
+							<button class="option__opt-btn">USD</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">EUR</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">RUB</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">UAH</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">USD</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">EUR</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">RUB</button>
+						</li>
+						<li class="option__item">
+							<button class="option__opt-btn">UAH</button>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="log-box">
 				<button 
