--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -29,11 +29,10 @@
 <body class="deleteThisClass">
 	<ul>
 		<li>
-			<a href="/main.html">Main</a>
+			<a href="./main.html">Main</a>
 		</li>
-		
 		<li>
-			<a href="/staking.html">Staking</a>
+			<a href="./staking.html">Staking</a>
 		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
