--- a/project/test/staking.html
+++ b/project/test/staking.html
@@ -391,7 +391,7 @@
 						<h4 class="footer__title">Contact Us</h4>
 						<ul class="footer__list">
 							<li class="footer__item">
-								<a href="mailto:mybitex@support.com" class="footer__link"><i class="icon-sr-mesg"></i> mybitex@support.com</a>
+								<a href="mailto:mybitex@support.com" class="footer__link footer__link--sad"><i class="icon-sr-mesg"></i><span> mybitex@support.com</span></a>
 							</li>
 						</ul>
 					</div>
