--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -34,6 +34,9 @@
 		<li>
 			<a href="./staking.html">Staking</a>
 		</li>
+		<li>
+			<a href="./crypto.html">Staking</a>
+		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
