--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -35,7 +35,7 @@
 			<a href="./staking.html">Staking</a>
 		</li>
 		<li>
-			<a href="./crypto.html">Staking</a>
+			<a href="./crypto.html">Crypto</a>
 		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
