--- a/project/test/crypto.html
+++ b/project/test/crypto.html
@@ -134,7 +134,7 @@
 				<div class="block__hr">
 					<div class="block__row">
 						<p class="title2">Loan Amount</p>
-						<p class="block__txt">All</p>
+						<a href="#" class="block__txt btn-link">All</a>
 					</div>
 					<div class="inputSelWrap">
 						<select 
