--- a/project/test/crypto.html
+++ b/project/test/crypto.html
@@ -137,21 +137,65 @@
 						<a href="#" class="block__txt btn-link">All</a>
 					</div>
 					<div class="inputSelWrap">
-						<select 
-							name="" 
-							id=""
-						>
-							<option 
-								value="USDT"
-							>
+						<div class="select">
+							<a href="#" class="select__btns" data-value="usdt">
+								<img 
+									src="./img/icon/val/usdt.png" 
+									alt=""
+								/>
 								USDT
-							</option>
-							<option 
-								value="btc"
-							>
-								btc
-							</option>
-						</select>
+							</a>
+							<ul class="select__list">
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="usdt"
+									>
+										<img 
+											src="./img/icon/val/usdt.png" 
+											alt=""
+										/>
+										USDT
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="btc"
+									>
+										<img 
+											src="./img/icon/val/btc.png" 
+											alt=""
+										/>
+										BTC
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="eth2"
+									>
+										<img 
+											src="./img/icon/val/eth2.png" 
+											alt=""
+										/>
+										ETH 2
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="eth"
+									>
+										<img 
+											src="./img/icon/val/eth.png" 
+											alt=""
+										/>
+										ETH
+									</button>
+								</li>
+							</ul>
+						</div>
 						<input 
 							type="number" 
 							placeholder="MIN Loan Amount 100 USDT"
@@ -161,21 +205,65 @@
 						<p class="title2">Collateral Amount</p>
 					</div>
 					<div class="inputSelWrap">
-						<select 
-							name="" 
-							id=""
-						>
-							<option 
-								value="USDT"
-							>
-								USDT
-							</option>
-							<option 
-								value="btc"
-							>
-								btc
-							</option>
-						</select>
+						<div class="select">
+							<a href="#" class="select__btns" data-value="btc">
+								<img 
+									src="./img/icon/val/btc.png" 
+									alt=""
+								/>
+								BTC
+							</a>
+							<ul class="select__list">
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="usdt"
+									>
+										<img 
+											src="./img/icon/val/usdt.png" 
+											alt=""
+										/>
+										USDT
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="btc"
+									>
+										<img 
+											src="./img/icon/val/btc.png" 
+											alt=""
+										/>
+										BTC
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="eth2"
+									>
+										<img 
+											src="./img/icon/val/eth2.png" 
+											alt=""
+										/>
+										ETH 2
+									</button>
+								</li>
+								<li class="select__item">
+									<button 
+										class="select__btn" 
+										data-name="eth"
+									>
+										<img 
+											src="./img/icon/val/eth.png" 
+											alt=""
+										/>
+										ETH
+									</button>
+								</li>
+							</ul>
+						</div>
 						<input 
 							type="number" 
 							placeholder="Available 0 BTC"
@@ -184,22 +272,14 @@
 					<div class="block__row">
 						<p class="title2">Loan Term</p>
 					</div>
-					<div class="inputSelWrap">
-						<select 
-							name="" 
-							id=""
-						>
-							<option 
-								value="30"
-							>
-								30 days
-							</option>
-							<option 
-								value="14"
-							>
-								14 days
-							</option>
-						</select>
+					<div class="select">
+						<a href="#" class="select__btns" data-value="30">30 days</a>
+						<ul class="select__list">
+							<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
+							<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
+							<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
+							<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
+						</ul>
 					</div>
 					<ul class="crypto__info-list">
 						<li class="crypto__info-row">
