--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -37,6 +37,9 @@
 		<li>
 			<a href="./crypto.html">Crypto</a>
 		</li>
+		<li>
+			<a href="./transform.html">C2C Lending</a>
+		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
