--- a/project/test/transform.html
+++ b/project/test/transform.html
@@ -123,190 +123,186 @@
 			</div>
 		</div>
 	</header>
-	<section class="crypto">
+	<section class="ctoc">
 		<div class="wrapper">
-			<div class="crypto__wrap block">
+			<div class="block">
 				<div class="block__title-row">
-					<h3 class="block__title">Crypto Loans</h3>
+					<h3 class="block__title">C2C Lending</h3>
 					<span class="block__dot">•</span>
-					<p class="block__sub-title">C2C Lending</p>
+					<p class="block__sub-title">Crypto Loans</p>
 				</div>
-				<div class="block__hr">
-					<div class="block__row">
-						<p class="title2">Loan Amount</p>
-						<a href="#" class="block__txt btn-link">All</a>
-					</div>
-					<div class="inputSelWrap">
+				<div class="ctoc__row">
+					<div class="ctoc__left">
+						<div class="block__row">
+							<p class="title2">Loan cycle</p>
+						</div>
+						<div class="inputBox">
+							<input type="number" min="0" placeholder="0.0100-0.0980" name="" id="">
+						</div>
+						<div class="block__row">
+							<p class="title2">Loan cycle</p>
+						</div>
 						<div class="select">
-							<a href="#" class="select__btns" data-value="usdt">
-								<img 
-									src="./img/icon/val/usdt.png" 
-									alt=""
-								/>
-								USDT
-							</a>
+							<a href="#" class="select__btns" data-value="30">30 days</a>
 							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
+								<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
+								<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
+								<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
+								<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
 							</ul>
 						</div>
-						<input 
-							type="number" 
-							placeholder="MIN Loan Amount 100 USDT"
-						/>
-					</div>
-					<div class="block__row">
-						<p class="title2">Collateral Amount</p>
-					</div>
-					<div class="inputSelWrap">
+						<div class="block__row">
+							<p class="title2">Available amount</p>
+						</div>
 						<div class="select">
-							<a href="#" class="select__btns" data-value="btc">
-								<img 
-									src="./img/icon/val/btc.png" 
-									alt=""
-								/>
-								BTC
-							</a>
+							<a href="#" class="select__btns" data-value="25">25%</a>
 							<ul class="select__list">
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="usdt"
-									>
-										<img 
-											src="./img/icon/val/usdt.png" 
-											alt=""
-										/>
-										USDT
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="btc"
-									>
-										<img 
-											src="./img/icon/val/btc.png" 
-											alt=""
-										/>
-										BTC
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth2"
-									>
-										<img 
-											src="./img/icon/val/eth2.png" 
-											alt=""
-										/>
-										ETH 2
-									</button>
-								</li>
-								<li class="select__item">
-									<button 
-										class="select__btn" 
-										data-name="eth"
-									>
-										<img 
-											src="./img/icon/val/eth.png" 
-											alt=""
-										/>
-										ETH
-									</button>
-								</li>
+								<li class="select__item"><button class="select__btn" data-name="42">42%</button></li>
+								<li class="select__item"><button class="select__btn" data-name="31">31%</button></li>
+								<li class="select__item"><button class="select__btn" data-name="25">25%</button></li>
+								<li class="select__item"><button class="select__btn" data-name="19">19%</button></li>
 							</ul>
 						</div>
-						<input 
-							type="number" 
-							placeholder="Available 0 BTC"
-						/>
+						<p class="block__warr">To perform actions you need to <a href="#" class="btn-link">login</a> or <a href="#" class="btn-link">register</a></p>
 					</div>
-					<div class="block__row">
-						<p class="title2">Loan Term</p>
+					<div class="ctoc__right">
+						<table class="block__table">
+							<thead>
+								<tr>
+									<th>
+										Daily Rate<br/>
+										(Annual Return)
+									</th>
+									<th>
+										Amount<br/>
+										(USDT)
+									</th>
+									<th>
+										Loan cycle<br/>
+										(day)
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td class="txt--green">0.0415%(15.14%)</td>
+									<td>63304.150 </td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0416%(15.18%)</td>
+									<td>1870.762</td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0415%(15.14%)</td>
+									<td>933.590 </td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0447%(16.31%) </td>
+									<td>1870.762</td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0415%(15.14%)</td>
+									<td>63304.150 </td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0416%(15.18%)</td>
+									<td>1870.762</td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0415%(15.14%)</td>
+									<td>933.590 </td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0447%(16.31%) </td>
+									<td>1870.762</td>
+									<td>30</td>
+								</tr>
+								<tr>
+									<td class="txt--green">0.0415%(15.14%)</td>
+									<td>63304.150 </td>
+									<td>30</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
-					<div class="select">
-						<a href="#" class="select__btns" data-value="30">30 days</a>
-						<ul class="select__list">
-							<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
-							<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
-						</ul>
 					</div>
-					<ul class="crypto__info-list">
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Daily Interest Rate</p>
-							<p class="crypto__txt">0.050000%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Annual Interest Rate</p>
-							<p class="crypto__txt">18.25%</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt">Total Interest Rate</p>
-							<p class="crypto__txt">0.00000000 USDT</p>
-						</li>
-						<li class="crypto__info-row">
-							<p class="crypto__txt-pat">Repayment Amount</p>
-							<p class="crypto__txt-min">0.00000000 USDT</p>
-						</li>
-					</ul>
-					<label id="agree" class="block__agree ">
-						<input type="checkbox" name="" id="agree">
-						<span class="checkbox"></span>
-						<p>I agree to the Loan <a href="#" class="btn-link">Service Agreement</a></p>
-					</label>
 				</div>
-				<p class="crypto__down-text">Note：You cannot pay commissions for the loan service with HT or point cards.</p>
-				<p class="block__warr">To perform actions you need to <a href="#" class="btn-link">login</a> or <a href="#" class="btn-link">register</a></p>
+			</div>
+		</div>
+	</section>
+	<section class="progress">
+		<div class="wrapper">
+			<div class="block">
+				<div class="block__title-row">
+					<h3 class="block__title">Maker in progress</h3>
+					<span class="block__dot">•</span>
+					<p class="block__sub-title">Collection in progress</p>
+					<span class="block__dot">•</span>
+					<p class="block__sub-title">Completed</p>
+				</div>
+				<div class="progress__table">
+					<table class="block__table">
+						<thead>
+							<tr>
+								<th>Time</th>
+								<th>Coin</th>
+								<th>Amount</th>
+								<th>Coin rate</th>
+								<th>Estimated benefit</th>
+								<th>Progress</th>
+								<th>Cycle</th>
+								<th>Executed Automatic maker</th>
+								<th>Status</th>
+								<th>Action</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>12:34</td>
+								<td>BTC</td>
+								<td>12</td>
+								<td>34$</td>
+								<td>654$</td>
+								<td class="txt--green">+0.63%</td>
+								<td>4</td>
+								<td>none</td>
+								<td class="txt--red">Pending</td>
+								<td><a href="#" class="btn-link">Details</a></td>
+							</tr>
+							<tr>
+								<td>12:34</td>
+								<td>BTC</td>
+								<td>12</td>
+								<td>34$</td>
+								<td>654$</td>
+								<td class="txt--green">+0.63%</td>
+								<td>4</td>
+								<td>none</td>
+								<td class="txt--red">Pending</td>
+								<td><a href="#" class="btn-link">Details</a></td>
+							</tr>
+							<tr>
+								<td>12:34</td>
+								<td>BTC</td>
+								<td>12</td>
+								<td>34$</td>
+								<td>654$</td>
+								<td class="txt--green">+0.63%</td>
+								<td>4</td>
+								<td>none</td>
+								<td class="txt--red">Pending</td>
+								<td><a href="#" class="btn-link">Details</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</section>
