--- a/project/test/transform.html
+++ b/project/test/transform.html
@@ -136,8 +136,9 @@
 						<div class="block__row">
 							<p class="title2">Loan cycle</p>
 						</div>
-						<div class="inputBox">
-							<input type="number" min="0" placeholder="0.0100-0.0980" name="" id="">
+						<div class="inputBox inputBox--row">
+							<div class="inputBox--row-i"><input type="number" min="0" placeholder="0.0100-0.0980" name="" id=""></div>
+							<input type="button" value="Market" class="btn-rw">
 						</div>
 						<div class="block__row">
 							<p class="title2">Loan cycle</p>
