--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -40,6 +40,9 @@
 		<li>
 			<a href="./transform.html">C2C Lending</a>
 		</li>
+		<li>
+			<a href="./table-staking.html">Table staking</a>
+		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
