--- a/project/test/index.html
+++ b/project/test/index.html
@@ -31,6 +31,12 @@
 	<header class="header">
 		<div class="header__bg-wrap">
 			<div class="header__bg">
+				<div class="header-img header-img--lapt">
+					<img 
+						src="./img/content/head-bg/laptop.png" 
+						alt=""
+						/>
+				</div>
 			</div>
 		</div>
 		<div class="header-wrap">
@@ -137,191 +143,6 @@
 			</div>
 		</div>
 	</header>
-	<section class="ctoc">
-		<div class="wrapper">
-			<div class="block">
-				<div class="block__title-row">
-					<h3 class="block__title">C2C Lending</h3>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">Crypto Loans</p>
-				</div>
-				<div class="ctoc__row">
-					<div class="ctoc__left">
-						<div class="block__row">
-							<p class="title2">Loan cycle</p>
-						</div>
-						<div class="inputBox inputBox--row">
-							<div class="inputBox--row-i"><input type="number" min="0" placeholder="0.0100-0.0980" name="" id=""></div>
-							<input type="button" value="Market" class="btn-rw">
-						</div>
-						<div class="block__row">
-							<p class="title2">Loan cycle</p>
-						</div>
-						<div class="select">
-							<a href="#" class="select__btns" data-value="30">30 days</a>
-							<ul class="select__list">
-								<li class="select__item"><button class="select__btn" data-name="90">90 days</button></li>
-								<li class="select__item"><button class="select__btn" data-name="60">60 days</button></li>
-								<li class="select__item"><button class="select__btn" data-name="30">30 days</button></li>
-								<li class="select__item"><button class="select__btn" data-name="14">14 days</button></li>
-							</ul>
-						</div>
-						<div class="block__row">
-							<p class="title2">Available amount</p>
-						</div>
-						<div class="select">
-							<a href="#" class="select__btns" data-value="25">25%</a>
-							<ul class="select__list">
-								<li class="select__item"><button class="select__btn" data-name="42">42%</button></li>
-								<li class="select__item"><button class="select__btn" data-name="31">31%</button></li>
-								<li class="select__item"><button class="select__btn" data-name="25">25%</button></li>
-								<li class="select__item"><button class="select__btn" data-name="19">19%</button></li>
-							</ul>
-						</div>
-						<p class="block__warr">To perform actions you need to <a href="#" class="btn-link">login</a> or <a href="#" class="btn-link">register</a></p>
-					</div>
-					<div class="ctoc__right">
-						<table class="block__table">
-							<thead>
-								<tr>
-									<th>
-										Daily Rate<br/>
-										(Annual Return)
-									</th>
-									<th>
-										Amount<br/>
-										(USDT)
-									</th>
-									<th>
-										Loan cycle<br/>
-										(day)
-									</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td class="txt--green">0.0415%(15.14%)</td>
-									<td>63304.150 </td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0416%(15.18%)</td>
-									<td>1870.762</td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0415%(15.14%)</td>
-									<td>933.590 </td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0447%(16.31%) </td>
-									<td>1870.762</td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0415%(15.14%)</td>
-									<td>63304.150 </td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0416%(15.18%)</td>
-									<td>1870.762</td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0415%(15.14%)</td>
-									<td>933.590 </td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0447%(16.31%) </td>
-									<td>1870.762</td>
-									<td>30</td>
-								</tr>
-								<tr>
-									<td class="txt--green">0.0415%(15.14%)</td>
-									<td>63304.150 </td>
-									<td>30</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="progress">
-		<div class="wrapper">
-			<div class="block">
-				<div class="block__title-row">
-					<h3 class="block__title">Maker in progress</h3>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">Collection in progress</p>
-					<span class="block__dot">•</span>
-					<p class="block__sub-title">Completed</p>
-				</div>
-				<div class="progress__table">
-					<table class="block__table">
-						<thead>
-							<tr>
-								<th>Time</th>
-								<th>Coin</th>
-								<th>Amount</th>
-								<th>Coin rate</th>
-								<th>Estimated benefit</th>
-								<th>Progress</th>
-								<th>Cycle</th>
-								<th>Executed Automatic maker</th>
-								<th>Status</th>
-								<th>Action</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>12:34</td>
-								<td>BTC</td>
-								<td>12</td>
-								<td>34$</td>
-								<td>654$</td>
-								<td class="txt--green">+0.63%</td>
-								<td>4</td>
-								<td>none</td>
-								<td class="txt--red">Pending</td>
-								<td><a href="#" class="btn-link">Details</a></td>
-							</tr>
-							<tr>
-								<td>12:34</td>
-								<td>BTC</td>
-								<td>12</td>
-								<td>34$</td>
-								<td>654$</td>
-								<td class="txt--green">+0.63%</td>
-								<td>4</td>
-								<td>none</td>
-								<td class="txt--red">Pending</td>
-								<td><a href="#" class="btn-link">Details</a></td>
-							</tr>
-							<tr>
-								<td>12:34</td>
-								<td>BTC</td>
-								<td>12</td>
-								<td>34$</td>
-								<td>654$</td>
-								<td class="txt--green">+0.63%</td>
-								<td>4</td>
-								<td>none</td>
-								<td class="txt--red">Pending</td>
-								<td><a href="#" class="btn-link">Details</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
-	</section>
-	
 	<footer class="footer">
 		<div class="footer__top">
 			<h3 class="footer__part">PARTNERS</h3>
