--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -23,6 +23,7 @@
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
 	<link media="all" rel="stylesheet" type="text/css" href="css/styles.min.css">
+	<link media="all" rel="stylesheet" type="text/css" href="css/media.min.css">
 
 </head>
 
