--- a/project/test/main.html
+++ b/project/test/main.html
@@ -31,12 +31,6 @@
 	<header class="header">
 		<div class="header__bg-wrap">
 			<div class="header__bg">
-				<div class="header-img header-img--lapt">
-					<img 
-						src="./img/content/head-bg/laptop.png" 
-						alt=""
-						/>
-				</div>
 			</div>
 		</div>
 		<div class="header-wrap">
@@ -143,6 +137,16 @@
 			</div>
 		</div>
 	</header>
+	<div class="header--img">
+		<div class="header__bg-wrap">
+			<div class="header-img header-img--lapt">
+				<img 
+					src="./img/content/head-bg/laptop.png" 
+					alt=""
+					/>
+			</div>
+		</div>
+	</div>
 	<section class="head">
 		<div class="head__tit-box">
 			<h2 class="head__title">
