--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -44,6 +44,9 @@
 		<li>
 			<a href="./table-staking.html">Table staking</a>
 		</li>
+		<li>
+			<a href="./main-accHead.html">main with header</a>
+		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
