--- a/project/test/main.html
+++ b/project/test/main.html
@@ -30,6 +30,8 @@
 <body>
 	<header class="header">
 		<div class="header__bg-wrap">
+			<div class="header__bg"></div>
+		</div>
 		</div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
