--- a/project/test/crypto.html
+++ b/project/test/crypto.html
@@ -322,7 +322,7 @@
 					</label>
 				</div>
 				<p class="crypto__down-text">Note：You cannot pay commissions for the loan service with HT or point cards.</p>
-				<p class="block__warr">To perform actions you need to <a href="#" class="btn-link">login</a> or <a href="#" class="btn-link">register</a></p>
+				<p class="block__warr">To perform actions you need to <a href="#" class="btn-link" data-btnPop='logInBtn'>login</a> or <a href="#" class="btn-link" data-btnPop='joinBtn'>register</a></p>
 			</div>
 		</div>
 	</section>
@@ -356,7 +356,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
