--- a/project/test/staking.html
+++ b/project/test/staking.html
@@ -211,6 +211,7 @@
 					<div class="btn-mid">
 						<button 
 							class="btn-or"
+							data-btnPop='logInBtn'data-btnPop='logInBtn'
 						>
 							Log In/Sign Up
 						</button>
@@ -368,7 +369,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
