--- a/project/test/transform.html
+++ b/project/test/transform.html
@@ -189,7 +189,7 @@
 								<li class="select__item"><button class="select__btn" data-name="19">19%</button></li>
 							</ul>
 						</div>
-						<p class="block__warr">To perform actions you need to <a href="#" class="btn-link">login</a> or <a href="#" class="btn-link">register</a></p>
+						<p class="block__warr">To perform actions you need to <a href="#" class="btn-link" data-btnPop='logInBtn'>login</a> or <a href="#" class="btn-link" data-btnPop='resetBtn'>register</a></p>
 					</div>
 					<div class="ctoc__right">
 						<table class="block__table">
@@ -362,7 +362,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
