--- a/project/test/building.html
+++ b/project/test/building.html
@@ -270,7 +270,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
