--- a/project/test/main.html
+++ b/project/test/main.html
@@ -161,6 +161,7 @@
 			</p>
 			<button 
 				class="btn-or"
+				data-btnPop="joinBtn"
 				>
 				Join us now
 			</button>
@@ -575,7 +576,7 @@
 							Numerous Income Methods That Help Maintain and Increase Your Wealth
 						</div>
 						<div class="conviction__nav">
-							<a href="#" class="conviction__try">Register now</a>
+							<a href="#" class="conviction__try" data-btnPop="joinBtn">Register now</a>
 						</div>
 					</div>
 				</li>
@@ -673,7 +674,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop="joinBtn">Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
