--- a/project/test/table-staking.html
+++ b/project/test/table-staking.html
@@ -1600,7 +1600,7 @@
 					/>
 				</li>
 			</ul>
-			<a href="#" class="btn-or">Register now</a>
+			<a href="#" class="btn-or" data-btnPop='joinBtn'>Register now</a>
 		</div>
 		<div class="footer__bot">
 			<div class="footer__line">
